--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@cacheable/node-cache": "^1.5.2",
     "@hapi/boom": "^10.0.1",
     "chalk": "^5.4.1",
+    "cheerio": "^1.0.0",
     "child_process": "^1.0.2",
     "dotenv": "^16.4.7",
     "pino": "^9.6.0",
