--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "chalk": "^5.4.1",
     "cheerio": "^1.0.0",
     "child_process": "^1.0.2",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
+    "got": "^14.4.5",
     "pino": "^9.6.0",
     "qrcode-terminal": "^0.12.0",
     "readline": "^1.3.0",
